# Tugas_Progdas_PascaUTS

Tugas1/: README.md  Soal8.cpp
Tugas2/: soal2CH9.cpp
UAS/uas-progdas-ghiyats/UAS-PROGDAS-GHIYATS/UAS-PROGDAS-GHIYATS/: .gitignore  CMakeLists.txt  main.cpp
UAS/uas-progdas-ghiyats/UAS-PROGDAS-GHIYATS/UAS-PROGDAS-GHIYATS/src/: AUDIT_PANEL.cpp  AUDIT_PANEL.h  DATA_PANEL.cpp  DATA_PANEL.h
